[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://general_purpose/fsm/fsm_anim.gd" type="Script" id=3]
[ext_resource path="res://actors/player/player_idle.gd" type="Script" id=4]
[ext_resource path="res://actors/player/player_run.gd" type="Script" id=5]
[ext_resource path="res://actors/player/player_fall.gd" type="Script" id=6]
[ext_resource path="res://actors/player/player_jump.gd" type="Script" id=7]
[ext_resource path="res://assets/player_normal.png" type="Texture" id=8]
[ext_resource path="res://materials/light_glow/light_glow.material" type="Material" id=9]
[ext_resource path="res://general_purpose/damage_areas/receive_damage_area.gd" type="Script" id=10]
[ext_resource path="res://actors/player/player_hit.gd" type="Script" id=11]
[ext_resource path="res://general_purpose/effects/flash_tween.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/player/player_dead.gd" type="Script" id=13]
[ext_resource path="res://actors/player/player_cutscene.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 6 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "celebrate"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=9]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fire"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=17]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=11]
resource_name = "jump fire"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "run_dust"
}, {
"args": [  ],
"method": "run_dust"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "run_fire"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 11 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 3, 5.5 )

[node name="player" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -6 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="player" type="Sprite" parent="rotate"]
light_mask = 6
material = ExtResource( 9 )
texture = ExtResource( 1 )
normal_map = ExtResource( 8 )
offset = Vector2( 0, -8 )
hframes = 4
vframes = 5
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="flash_tween" parent="rotate/player" instance=ExtResource( 12 )]

[node name="firepos" type="Position2D" parent="rotate"]
position = Vector2( 7, -8 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/celebrate = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/fall = SubResource( 9 )
anims/fire = SubResource( 4 )
anims/hit = SubResource( 17 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
"anims/jump fire" = SubResource( 11 )
anims/run = SubResource( 7 )
anims/run_fire = SubResource( 10 )
script = ExtResource( 3 )

[node name="anim_fx" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/default = SubResource( 13 )
anims/jump = SubResource( 14 )
anims/land = SubResource( 15 )

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="hit" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="cutscene" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="RcvDamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="damage_collision" type="CollisionShape2D" parent="RcvDamageArea"]
position = Vector2( 0, -6.5 )
shape = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="death_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="damage_collision" type="CollisionShape2D" parent="death_area"]
position = Vector2( 0, -6.5 )
shape = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="death_area" to="." method="_on_death_area_body_entered" flags=3]
